--- a/mdx_contents/blog/blockchain/uniswapV3/01.mdx
+++ b/mdx_contents/blog/blockchain/uniswapV3/01.mdx
@@ -146,7 +146,7 @@ $$
 \tag{5}
 
 \Large{
-  \lambda \overset{\Delta}= \frac {\delta L}{\delta \sqrt{P}} \\
+  \lambda \overset{\Delta}= \frac {\delta Y}{\delta \sqrt{P}} \\
 }
 $$
 
@@ -155,12 +155,12 @@ $$
 
 \text{where }
 &\delta \sqrt{P} \text{ - quantum (sqrt) price range, i.e. a tick for V3} \\
-&\delta L \text{ - liquidity within the range, i.e. amount of token0 tradable in }[P, P + \delta P]
+&\delta Y \text{ - liquidity within the range, i.e. amount of token1 tradable within range} [\sqrt P, \sqrt P + \delta \sqrt P].
 
 \end{aligned}
 $$
 
-Then liquidity curve is $\lambda - P$.
+Then liquidity curve is the $\lambda - P$ curve.
 
 ### Uniswap V2
 
